2002-07-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/ggi.trm: Minor changes in the documentation.

	* term/metapost.trm: Fix `something' => `something` in the
	documentation section.

2002-07-10  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Allow any sizes of TTF fonts.

2002-07-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/metapost.trm: Fix color reset, improved documentation
	(contributed by Arun Persaud <apersaud@lbl.gov>).

2002-07-09  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Fix for selecting a TTF font.

2002-07-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* pm3d/contrib/pm3dConvertToImage.awk: Don't fail on empty map. Treat
	properly both cases of scans_in_x.

2002-07-07  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.h src/pm3d.c: Removed unused field use_column in
	pm3d_struct.

2002-07-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/mif.trm term/post.trm: Changed "continous" to "continuous".

	* term/metapost.trm: Support for 'set palette maxcolors'.

	* term/post.trm: Added "0 setgray" for the case Color==false in the
	definition of "DL".

2002-07-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* pm3d/contrib/pm3dConvertToImage.awk: Fix for compressing several
	images in one postscript file.

2002-07-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/plot3d.c: Fallback to PM3DSURFACE style for 2 or 4 columns is no
	more required.

2002-07-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/plot3d.c: Error message for "using 1:2:3:4" when neither pm3d
	nor `using ... palette` is specified.

2002-07-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/datafile.c demo/pm3d.dem: Binary datafiles now accept 'using'
	with 4 parameters for independent z and color values of splotting
	'with pm3d' and 'with lines|points palette'.

2002-07-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS src/plot3d.c docs/gnuplot.doc: Support plotting surfaces with